[mms] Strip extra 'Fwd' and 'Re' cruft from subject line when replying to or
      forwarding a message.
[mms] Don't send server requests when autocompleting addresses when possible.
[mms] Added readonly mailbox and disable compose hooks.
[mms] Saving draft on session expiration now handled via VFS.
[mms] Add preference to delete draft on resume & send.


-----------
v4.3.10-cvs
-----------




------
v4.3.9
------

[mms] Fix error if user's account only contains an INBOX (Bug #9273).


------
v4.3.8
------

[jan] SECURITY: Properly escape user input in Fetchmail configuration.
[mms] Fix updating POP3 indices when using mailbox caching (Bug #8035).
[jan] Include "anyone" user when listing users in the ACL screen (Bug #9135).
[mms] Turn DNS prefetching off when displaying untrusted message content
      (Ticket #8836).


------
v4.3.7
------

[mms] Fix spellcheck-on-send when using fckeditor and no errors exist
      (Bug #8833).
[mms] Fix authenticate API call and synchronization when using realms
      (robin.west@dal.ca, Bugs #6749, #8872).
[mms] Optimize folder tree initialization (Request #8805).
[mms] Add command line fetchmail script (tjacyno@galasoft.net, Request #8812).
[jan] Workaround broken PHP number formatting with some locales (Bug #8780).


------
v4.3.6
------

[cjh] Fix the default value for the nav_audio preference
      (sistemisti-posta@csi.it, Bug #8725).
[mms] Make sure sent-mail folders exist if using the drop-down selection list
      on the compose page (Bug #8520).
[mms] When replying to list, correctly extract e-mail address if multiple
      entries exist in the List-Post header (Bug #8719).
[mms] For messages marked as innocent but not moved to Inbox, don't report
      them as deleted within the current mailbox (Bug #8221).
[jan] Don't show address book preference group if address books are disabled
      (Bug #8692).
[mms] Save References/In-Reply-To header info when saving a draft (Bug #8661).